tests/baselines/reference/parseErrorDoubleCommaInCall.errors.txt
parseErrorDoubleCommaInCall.ts(2,10): error TS1136: Property assignment expected.


==== parseErrorDoubleCommaInCall.ts (1 errors) ====
    Boolean({
        x: 0,,
             ~
!!! error TS1136: Property assignment expected.
    });
    